--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+.img-bg {
+  filter: brightness(60%);
+}
 
 .carousel-item img {
   height: 600px;
