--- a/style.css
+++ b/style.css
@@ -12,3 +12,8 @@ body {
   max-width: 100hv;
   background-image: linear-gradient(#000, #000);
 }
+.model-bg {
+  background: #289bde;
+  height: 40vh;
+  width: 170vh;
+}
